# CodeMore

./: .appveyor.yml  .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md  resources.qrc  version
ci/scripts/macos/: make_macos_installer.sh
js/: Dialogs.js  FileUtils.js  InternalDataController.js  JsonUtils.js  PomodoroTimer.js  TodoDataHandling.js
qml/: AboutWindow.qml  CustomButton.qml  CustomRoundButton.qml  MainMenu.qml  MainWindow.qml  NewTaskDialog.qml  OpenDialog.qml  PomodoroTimer.qml  SaveChanges.qml  SaveDialog.qml  TaskList.qml  TaskListExpectations.qml  TaskListReality.qml  TodoGoalsTreeModel.qml  TodoGoalsTreeView.qml  TodoListModel.qml
src/: BusinessLogic.cpp  BusinessLogic.h  CodeMore.rc  CodeMore.rc.in  Localization.cpp  Localization.h  LocalizationDispatcher.cpp  LocalizationDispatcher.cpp.bak  LocalizationDispatcher.h  LocalizationDispatcher.h.bak  Settings.cpp  Settings.h  ThemeDispatcher.cpp  ThemeDispatcher.h  TodoGoalsTreeModel.cpp  TodoGoalsTreeModel.h  TodoListSerializer.cpp  TodoListSerializer.h  TodoListTagsFactory.cpp  TodoListTagsFactory.h  main.cpp
tests/: CMakeLists.txt  SettingsTests.cpp  ThemeDispatcherTests.cpp  TodoListModelSerializerTests.cpp  TodoListSerializerTests.cpp  tests.cpp
themes/: Dark.theme  Default.theme
translation/: MainMenu_ru.ts
translations/: CodeMore_en.ts  CodeMore_es.ts  CodeMore_ru.ts
