CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
PROJECT (CodeMore)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

# project description
SET (PROJECT_NAME "CodeMore")
SET (PROJECT_DESCRIPTION "CodeMore Application")

FILE (READ ${CMAKE_CURRENT_SOURCE_DIR}/version VERSION)
STRING (REPLACE "\n" "" VERSION ${VERSION})
STRING (REPLACE "\r" "" VERSION ${VERSION})
STRING (REPLACE "." ";" VERSION_LIST ${VERSION})
LIST (GET VERSION_LIST 0 VERSION_MAJOR)
LIST (GET VERSION_LIST 1 VERSION_MINOR)
LIST (GET VERSION_LIST 2 VERSION_PATCH)
LIST (GET VERSION_LIST 3 VERSION_BUILD)

CONFIGURE_FILE (${SRC_DIR}/CodeMore.rc.in ${CMAKE_BINARY_DIR}/CodeMore.rc)

SET (SOURCES
        ${SRC_DIR}/main.cpp
        ${SRC_DIR}/BusinessLogic.cpp
        ${SRC_DIR}/TodoListSerializer.cpp
    )

SET (HEADERS
        ${SRC_DIR}/BusinessLogic.h
        ${SRC_DIR}/TodoListSerializer.h
    )

SET (CMAKE_AUTOMOC ON)
SET (CMAKE_AUTORCC ON)

FIND_PACKAGE (Qt5 COMPONENTS Quick Qml Widgets Core)
QT5_ADD_RESOURCES (RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc)

IF (WIN32)
    SET (RESOURCES ${RESOURCES} ${CMAKE_BINARY_DIR}/CodeMore.rc)
ENDIF ()

ADD_SUBDIRECTORY (third_party)

ADD_EXECUTABLE (CodeMore ${SOURCES} ${HEADERS} ${RESOURCES})
TARGET_LINK_LIBRARIES (CodeMore Qt5::Quick Qt5::Qml Qt5::Widgets)

ADD_CUSTOM_TARGET (
        version ALL
        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/version
    )

ADD_DEPENDENCIES (CodeMore version)

IF (BUILD_TESTING)
    INCLUDE (CTest)
    ADD_SUBDIRECTORY (tests)
ENDIF (BUILD_TESTING)
